--- a/compose-app-balancer.yaml
+++ b/compose-app-balancer.yaml
@@ -1,31 +1,40 @@
 services:
-  node-demo:
-    image: node-demo:compose
-    ports:
-      - 3000:3000
+  node-app:
+    image: node-demo:compose-internal    
     depends_on:
       - mongo
+    networks:
+      - nginx-network
+      - internal-app-network  
+    restart: unless-stopped         
   mongodb:
     image: mongo
-    ports:
-      - 27017:27017
     environment:
       - MONGO_INITDB_ROOT_USERNAME=admin
       - MONGO_INITDB_ROOT_PASSWORD=password
     volumes:
-      - mongo-data:/data/db
+      - mongo-data:/data/db  
+    networks:      
+      - internal-app-network
   mongo-express:
     image: mongo-express
     restart: unless-stopped # fixes MongoNetworkError when mongodb is not ready when mongo-express starts    
     ports:
-      - 8080:8081
+      - 8081
     environment:
       - ME_CONFIG_MONGODB_ADMINUSERNAME=admin
       - ME_CONFIG_MONGODB_ADMINPASSWORD=password
       - ME_CONFIG_MONGODB_SERVER=mongodb
+    networks:      
+      - internal-app-network
     depends_on:
       - mongodb
 
 volumes:
   mongo-data:
     driver: local
+
+networks:
+  internal-app-network:   
+  nginx-network:
+    external: true  
